[package]
name = "code_gpt"
version = "0.1.0"
edition = "2021"

[dependencies]
ai_functions = "0.1.1"
async-trait = "0.1.80"
crossterm = "0.27.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
strum = "0.26.2"
strum_macros = "0.26.4"
tokio = { version = "1.38.0", features = ["full"] }
webbrowser = "1.0.1"
